# pihole-k8s-statefulset

./: .bump2version  .bump2version_pyhole_sync_image  .bumpversion.cfg  DEVELOPMENT.md  README.md  index.yaml  pihole-synchronized-0.1.0.tgz  pihole-synchronized-0.1.1.tgz  pihole-synchronized-0.1.2.tgz  pihole-synchronized-0.2.0.tgz  pihole-synchronized-0.3.0.tgz  pihole-synchronized-0.3.1.tgz  pihole-synchronized-0.3.2.tgz  pihole-synchronized-0.3.3.tgz  test-namespace  test.yaml  values.yaml
.github/workflows/: build-pihole-sync-image.yml  helm-pr.yml  image-pr.yml  package-helm-chart.yml  pr-python.yml  pr.yml
pihole-sync-image/: .dockerignore  Dockerfile  README.md  dev_requirements.txt  pihole_sync.py  pyproject.toml
pihole-synchronized/: Chart.yaml  values.yaml
pihole-synchronized/templates/: _helpers.tpl  custom_domains_configmap.yaml  env_configmap.yaml  ingress.yaml  rolebinding.yaml  secret.yaml  statefulset.yaml  sync_job.yaml  tcp_service.yaml
pihole-synchronized/templates/ingress/: certificate.yaml  ingress.yaml
pihole-synchronized/templates/services/: http_service.yaml  pihole_headless_service.yaml  udp_service.yaml
pihole-synchronized/templates/syncing/: _sync_job_template.yaml  backup_pvc.yaml  initial_sync_job.yaml  role.yaml  rolebinding.yaml  service_account.yaml  sync_cronjob.yaml
pihole-synchronized/templates/tests/: test-connection.yaml
