[tool.poetry]
name = "pihole_sync"
version = "0.2.0"
description = "Syncs gravity.db for PiHoles"
authors = ["Eugene Davis <eugene@eugenemdavis.net>"]
license = "GPLv3"

[tool.poetry.scripts]
pihole_sync = 'pihole_sync.pihole_sync:main'

[tool.poetry.dependencies]
python = "^3.9"
kubernetes = "^23.6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.9"
bump2version = "^1.0.1"
packaging = "^21.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'FORMAT']
max-line-length=200